--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<link type="text/css" rel="stylesheet" href="../../week-3/stylesheets/my-berkshire-stylesheet.css">
 	<title>
 		BERKSHIRE HATHAWAY INC.
 	</title>
