--- a/week-3/dissect-me.html
+++ b/week-3/dissect-me.html
@@ -32,3 +32,21 @@
 
 	</body>
 </html>
+
+<!--
+	What HTML5 tags have you used in this challenge and continue to return to often? Why?
+
+	I used <header> and <section> tags. Really any HTML 5 tag is handy like main, article, section, aside, etc.
+	because it makes your html easier to read. Also when you need to apply CSS to your html file, sectioning
+	realted groups together makes it a lot easier to modify.
+
+	How do elements get laid out on a page? What is the order the browser uses to display elements?
+	Did they talk about that in this challenge? I don't remember reading about what order the browser displays
+	the elements. If I were to take a guess, the browser reads that it's an HTML file first, then it looks at all
+	the tags, probably starts with the header tag first. Then it reads through the rest of the html file and laids 
+	out the elements as you had commands in your html file. At least this is what my impresssion is currently, feel free to correct me on this question.
+
+	What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date? What about research some shortcuts that already exist?
+
+	You can basically create preloaded code and access that code with whatever key word you set up. It's actually pretty neat, and I imagine will come in a lot of handy later. Yeah, I'll more than likely create more snippets later, and no I haven't research any existing shortcuts yet.
+-->
