Flesh our GPS2.1html and CSS

--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -1,9 +1,17 @@
 <!--
 Write your names here:
-1.
-2.
+1.Jack Huang
+2.Doug Tsui
 We spent [#] hours on this challenge.
 -->
+
+<!--
+  Reflection
+  It was an interesting challenge. We found that we couldn't get column to form themselves the same
+  way as we did in the Berkshire Hathaway challenge. So we had to think about a different method
+  of solving it, and also use google to help us find the solution. Overall, yes I do feel like
+  I learn something on positioning.
+
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
 
@@ -16,6 +24,7 @@ We spent [#] hours on this challenge.
   </head>
 
   <body>
+    <body>
     <header>
       <h1>GitHub: Git Cheat Sheet</h1>
       <p>Git is the open source distributed version control system that
@@ -24,6 +33,8 @@ We spent [#] hours on this challenge.
         instructions for quick reference.</p>
     </header>
 
+    <div class="image"></div>
+    
     <section class="column-1">
       <article>
         <h2>INSTALL GIT</h2>
@@ -276,6 +287,8 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
+  <!-- Add your reflection here as a comment. -->
+  </body>
   <!-- Add your reflection here as a comment. -->
   </body>
 </html>
